[tool.poetry]
name = "web-app-gradio"
version = "0.1.0"
description = ""
authors = ["Santo K Thomas <santokalayil@gmail.com>"]
readme = "README.md"
packages = [{include = "web_app_gradio"}]

[tool.poetry.dependencies]
python = "^3.10"
gradio = "^3.39.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
